implement base agent

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,5 +1,5 @@
 # Base Agent - Gemini API Keys
-# SADECE GEMINI 3 KULLANILACAK (gemini-3-flash, gemini-3-pro)
+# SADECE GEMINI 3 KULLANILACAK (gemini-3-flash-preview, gemini-3-pro-preview)
 
 # Primary key
 GEMINI_API_KEY=your_api_key_here
@@ -13,5 +13,5 @@ GEMINI_API_KEY_5=your_fifth_key_here
 # Daha fazla key eklenebilir: GEMINI_API_KEY_6, _7, ...
 
 # Model config
-LLM_MODEL=gemini-3-flash
-LLM_FALLBACK_MODEL=gemini-3-pro
+LLM_MODEL=gemini-3-flash-preview
+LLM_FALLBACK_MODEL=gemini-3-pro-preview
