--- a/src/llm/BLUEPRINT.spec.yaml
+++ b/src/llm/BLUEPRINT.spec.yaml
@@ -65,6 +65,12 @@ implementation:
       - model allowlist uygular
       - rotation manager ile key/account donusumunu yapar
       - tek paket altinda tutulur (subpackage yok)
+      - Gemini adapter REST kullanir:
+        - base_url: https://generativelanguage.googleapis.com
+        - POST /v1beta/models/{model}:generateContent
+        - POST /v1beta/models/{model}:streamGenerateContent
+        - GET /v1beta/models
+        - auth: x-goog-api-key header (API key)
 
 tests:
   unit:
