--- a/src-go/BLUEPRINT.spec.yaml
+++ b/src-go/BLUEPRINT.spec.yaml
@@ -6,6 +6,8 @@ _meta:
 
 implementation:
   structure:
+    - go.mod
+    - cmd/base-agent/main.go
     - agent.go
     - config.go
     - result.go
