Revert "Remove Python implementation, keep Go"
This reverts commit 9263955ed176e00827b1fd1b5f7d57e2fbaa14ba.

--- a/src-go/debug_cli/BLUEPRINT.yaml
+++ b/src-go/debug_cli/BLUEPRINT.yaml
@@ -1,187 +1,1 @@
-_meta:
-  version: "0.2.0"
-  updated: 2026-01-19
-  status: draft
-
-intent: |
-  Base Agent debug CLI.
-  HTTP API server'a bağlanır (remote test).
-
-overview: |
-  Basit REPL chat arayüzü. aichat benzeri slash komutları.
-
-  Hedefler:
-    - Agent davranışını hızlı test et
-    - Model/provider değiştir, farkları gör
-    - Task'ları izle
-    - Tool calling'i gözlemle
-
-  Modlar:
-    HTTP: Server'a HTTP request atar
-
-cli:
-  usage: |
-    debug-cli repl --url http://localhost:8080
-    # Tek komut
-    debug-cli run "Merhaba"
-
-environment:
-  optional:
-    - BASE_AGENT_URL (default http://localhost:8080)
-
-commands:
-  slash:
-    - name: .model
-      description: Model seç (interactive liste)
-      example: .model
-
-    - name: .provider
-      description: Provider seç (gemini/codex/opus)
-      example: .provider
-
-    - name: .tasks
-      description: Task listesi
-      example: .tasks
-
-    - name: .task
-      description: Task detayı
-      example: .task task_abc123
-
-    - name: .tools
-      description: Kayıtlı tool'ları listele
-      example: .tools
-
-    - name: .system
-      description: System prompt ayarla
-      example: .system Sen yardımcı bir asistansın.
-
-    - name: .clear
-      description: Chat geçmişini temizle
-      example: .clear
-
-    - name: .debug
-      description: Debug mode toggle (tool calls, raw response)
-      example: .debug
-
-    - name: .info
-      description: Mevcut ayarları göster
-      example: .info
-
-    - name: .help
-      description: Yardım
-      example: .help
-
-    - name: .exit
-      description: Çık
-      example: .exit
-
-api:
-  types:
-    CLIConfig:
-      fields:
-        - name: base_url
-          type: string
-          default: "http://localhost:8080"
-          description: HTTP mode için server URL
-
-        - name: provider
-          type: string
-          default: "gemini"
-
-        - name: model
-          type: string
-          nullable: true
-          description: null = provider default
-
-        - name: system_prompt
-          type: string
-          nullable: true
-
-        - name: temperature
-          type: float
-          default: 0.3
-
-        - name: debug
-          type: boolean
-          default: false
-
-    ChatMessage:
-      fields:
-        - name: role
-          type: enum(user, assistant)
-        - name: content
-          type: string
-
-    TaskInfo:
-      fields:
-        - name: id
-          type: string
-        - name: status
-          type: string
-        - name: instruction
-          type: string
-        - name: output
-          type: string
-          nullable: true
-        - name: created_at
-          type: string
-
-    ToolInfo:
-      fields:
-        - name: name
-          type: string
-        - name: description
-          type: string
-
-  exports:
-    Backend:
-      type: interface
-      description: HTTP mode için arayüz
-      methods:
-        - name: execute
-          parameters:
-            - name: instruction
-              type: string
-            - name: history
-              type: list<ChatMessage>
-          returns: ExecuteResult
-
-        - name: list_tasks
-          parameters:
-            - name: limit
-              type: integer
-              default: 10
-          returns: list<TaskInfo>
-
-        - name: get_task
-          parameters:
-            - name: task_id
-              type: string
-          returns: TaskInfo
-
-        - name: list_tools
-          returns: list<ToolInfo>
-
-        - name: list_models
-          returns: list<string>
-
-    HTTPBackend:
-      type: class
-      implements: Backend
-      description: HTTP API client
-
-    REPL:
-      type: class
-      description: Ana REPL loop
-      methods:
-        - name: run
-          description: REPL başlat
-
-implementation: "./BLUEPRINT.spec.yaml"
-
-tests: "./BLUEPRINT.spec.yaml"
-
-dependencies:
-  internal:
-    - path: ../api
-      desc: API types (http mode)
+../../src/debug_cli/BLUEPRINT.yaml
